--- a/index1.html
+++ b/index1.html
@@ -117,6 +117,15 @@
             margin-bottom: 30px;
             position: relative;
         }
+/* Club Logo Styles */
+        /* Club Logo Styles */
+.club-logo {
+    text-align: center;
+    margin-bottom: 20px;
+    animation: fadeIn 0.8s ease-out;
+}
+
+
 
         .logo {
             font-size: 3.2rem;
@@ -656,7 +665,10 @@
         <!-- Sign Up Page -->
         <div class="page active" id="signup-page">
             <div class="header">
-                <div class="logo">DOMAIN GUESSING</div>
+                <div class="club-logo">
+                    <img src="AlphaOneLogo.png" alt="Club Logo" class="logo-image">
+                </div>
+                <div class="logo">AlphaQuest: The Ultimate Challenge</div>
                 <div class="subtitle">CREATE YOUR ACCOUNT</div>
                 <div class="sticker">ALPHA ONE</div>
             </div>
@@ -833,7 +845,7 @@
         </div>
 
         <div class="footer">
-            <span class="made-with-love">Made with love by AlphaOne</span>
+            <span class="made-with-love">Made with ❤️ by AlphaOne</span>
         </div>
     </div>
 
